--- a/app/src/main/res/layout/activity_gerar_qrcode.xml
+++ b/app/src/main/res/layout/activity_gerar_qrcode.xml
@@ -33,6 +33,7 @@
             android:layout_height="300dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/btnBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Voltar"
