--- a/app/src/main/res/layout/activity_scan_qrcode.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/main_black"
+        android:background="@color/main_black">
         >
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/btn_Voltar"
