--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,7 +30,7 @@
     <style name="mainTitle" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/poppinsbold</item>
         <item name="android:textColor">@color/main_black</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">26sp</item>
         <item name="android:lineHeight">26dp</item>
     </style>
 
@@ -64,6 +64,16 @@
         <item name="android:background">@drawable/contorno_btnsecundario</item>
     </style>
 
+    <!-- Botão vermelho -->
+    <!-- Usaremos para AppCompatButton -->
+    <style name="btnDanger" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">@font/robotobold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/contorno_btnvermelho</item>
+    </style>
+
     <!-- Botões de "hyper link" -->
     <!-- Usaremos para AppCompatTextView -->
     <style name="btnHyperLink" parent="Widget.AppCompat.TextView">
@@ -81,6 +91,26 @@
         <item name="android:layout_marginBottom">15dp</item>
         <item name="android:padding">14dp</item>
         <item name="android:popupElevation">12dp</item>
+    </style>
+
+    <!-- Escrita negrita em página que mostra dados -->
+    <!-- Usaremos para AppCompatTextView -->
+    <style name="infoHead" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/robotobold</item>
+        <item name="android:textColor">@color/main_black</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:lineHeight">25dp</item>
+    </style>
+
+    <!-- Escrita negrita em página que mostra dados -->
+    <!-- Usaremos para AppCompatTextView -->
+    <style name="infoBody" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/robotoregular</item>
+        <item name="android:textColor">@color/main_black</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:lineHeight">25dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:layout_marginStart">5dp</item>
     </style>
 
 </resources>
